objects/Department_Code__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Department Codes</relationshipLabel>
        <relationshipName>Department_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <description>This field is being added to support the Group Load functionality through Customer Master.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>These are optional, and are only used when the client chooses to distinguish departments. Group Suffix may be used for this information, but some clients choose to use these department details instead.</inlineHelpText>
        <label>Department Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Description__c</fullName>
        <description>This field is being added to support the Group Load functionality through Customer Master.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>These are optional, and are only used when the client chooses to distinguish departments. Group Suffix may be used for this information, but some clients choose to use these department details instead.</inlineHelpText>
        <label>Department Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Department Code</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Department Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Department Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>